...
                } label: {
                    VStack{
                        Image(systemName: elements[2].iconSystemName)
                        Circle().fill(Color("Primary")).frame(width: 5, height: 5, alignment: .center).opacity(selectedTab == elements[2].tag ? 1 : 0)
                    }
                }.frame(width: geometry.size.width/5).foregroundColor(selectedTab == elements[2].tag ? Color("PrimaryLabel") : Color("PrimaryLabel").opacity(0.5))
                    .accessibilityIdentifier("ExploreTabBar")
                Spacer()
                
                Button{
                    selectedTab = elements[3].tag
                } label: {
                    VStack{
...
