...
                                .clipShape(Circle())
                                .accessibilityIdentifier("SeeAllViewCategoriesButton")
                        }
                        Spacer().frame(height: 8)
                        HStack{
                            Text(viewModel.viewTitle).font(.largeTitle.bold()).foregroundColor(Color("PrimaryLabel"))
                                .accessibilityIdentifier("SeeAllViewTitle")
                            Spacer()
                            
                        }
                        Text(viewModel.categoryFilters.joined(separator: ", ")).font(.caption).foregroundColor(Color("PrimaryLabel")).accessibilityIdentifier("SeeAllViewCategoryFilterText")
                        
                        
...
